--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <meta name="description" content="Your app description here" />
     <!-- Also update the apple touch icon to use your aglogo -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/aglogo.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
